# tap-escrow-manager

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  grafana-dashboard.json
.claude/: settings.local.json
.claude/plans/: horizon-upgrade.md  implementation-checklists.md
.github/workflows/: ci.yml  docker-image.yml
src/: config.rs  contracts.rs  kafka.rs  main.rs  metrics.rs  network_subgraph.rs  ravs.rs  receipts.rs  subgraph.rs  subgraphs.rs
src/abi/: Escrow.abi.json  GraphTallyCollector.abi.json  PaymentsEscrow.abi.json
