[package]
name = "tap-escrow-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.34", default-features = false, features = [
  "clock",
  "serde",
] }
ethers = "2.0.14"
rdkafka = { version = "0.36.0", features = [
  "cmake-build",
  "gssapi",
  "tracing",
] }
reqwest = { version = "0.12.4" }
reqwest_old = { package = "reqwest", version = "0.11.27" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
serde_with = "3.4.0"
snmalloc-rs = "0.3.4"
thegraph-core = { version = "0.4.1", features = ["subgraph-client"] }
tokio = { version = "1.32.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "time",
  "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
