[package]
name = "tap-escrow-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.3", features = ["contract", "signer-local"] }
anyhow = "1.0.75"
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
futures-util = "0.3.30"
prost = "0.13.2"
rdkafka = { version = "0.38.0", features = [
    "cmake-build",
    "gssapi",
    "tracing",
] }
reqwest = "0.12.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
serde_with = "3.4.0"
snmalloc-rs = "0.3.4"
thegraph-client-subgraphs = "0.2.0"
titorelli = { git = "https://github.com/edgeandnode/titorelli.git", rev = "4c14fc1" }
tokio = { version = "1.32.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
    "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
